<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayoutMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.iop.indiaonphone.MainActivity" >

        <ImageView
            android:id="@+id/imgIndiaOnPhoneLogo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_main_objects_top_margin"
            android:layout_weight="4"
            android:contentDescription="@string/india_on_phone_logo_heading"
            android:src="@drawable/ic_indiaonphone_logo" />

        <EditText
            android:id="@+id/edFullName"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_main_objects_top_margin"
            android:layout_weight="1"
            android:hint="@string/activity_main_full_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edPhone"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_main_objects_top_margin"
            android:layout_weight="1"
            android:hint="@string/activity_main_phone_number_hint"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_main_objects_top_margin"
            android:layout_weight="1"
            android:background="@color/accent"
            android:drawableEnd="@drawable/ic_white_arrow_right"
            android:drawableRight="@drawable/ic_white_arrow_right"
            android:onClick="yesMethod"
            android:text="@string/activity_main_yes_button_text"
            android:textColor="@color/icons"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtShareMessage"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_main_objects_top_margin"
            android:layout_weight="2"
            android:text="@string/share_message"
            android:textSize="8pt" />
    </LinearLayout>

</ScrollView>